# domain-checker

./: Cargo.toml  README.md
.github/workflows/: publish.yml
src/: main.rs
